@@ -2,6 +2,7 @@
 Version: 1.5.0
 Date: ???
   Features:
+    - Added refresh button
     - Added 'Logistics' search option to search for logistics entities transporting the item
     - 'Storage' search now searches linked-containers (used by some mods)
 ---------------------------------------------------------------------------------------------------
